--- a/starter-code/client/src/app/entry-list/entry-list.component.html
+++ b/starter-code/client/src/app/entry-list/entry-list.component.html
@@ -1,4 +1,5 @@
 <div *ngFor="let new of news" class="titular"> 
   <h2>{{new.title}}</h2>
   <p>Fecha: {{new.date}}</p>
+  <button [routerLink]="['/', new._id]">Leer más</button>
 </div>
